# jderobot

./: ChangeLog  Makefile  Makefile.am  README  configure.in
base/: Makefile.am  interface.c  interface.h  jde.c  jde.conf  jde.conf.in  jde.h  jde_private.h  jderobot.c  jderobot.conf.in  jdeshell.c  loader.c  loader.h
base/swig/: Makefile.am  interface.i  jde.i  schema.i
core/: Makefile  jde.c  jde.conf  jde.h  jdegui.c  jdegui.h  mastergui.c  mastergui.fd  mastergui.h  pioneer.c  pioneer.h  pioneer_const.h  ponpath  sensorsmotorsgui.c  sensorsmotorsgui.fd  sensorsmotorsgui.h
debian/: changelog  control  jderobot-drivers.install  jderobot-libs.install  jderobot-schemas.install  jderobot-schemes.install  jderobot-services.install  jderobot-utils.install  postinst.ex  rules
docs/: Makefile.am
docs/howto-gazebo/: Makefile  howto-gazebo.tex
docs/manual/: aplicacion.tex  drivers.tex  esquemas.tex  gui.tex  introduccion.tex  jdecmanual.tex
docs/progeo-manual/: progeo-manual.tex
drivers/: Makefile.am
drivers/evi/: Makefile  Makefile.am  evi.cpp
drivers/firewire/: Makefile  Makefile.am  firewire.c
drivers/gazebo/: Makefile  Makefile.am  gazebo.c
drivers/graphics_gtk/: Makefile  Makefile.am  graphics_gtk.c  graphics_gtk.h
drivers/graphics_xforms/: Makefile  Makefile.am  graphics_xforms.c
drivers/imagefile/: Makefile  Makefile.am  imagefile.c
drivers/mplayer/: Makefile  Makefile.am  mplayer.c  mplayer.conf
drivers/naobody/: adapter.cpp  adapter.h  naobody.conf  naobody.cpp  naobody.h
drivers/networkclient/: Makefile  Makefile.am  jdemessages.h  networkclient.c
drivers/networkserver/: Makefile  Makefile.am  networkserver.c
drivers/opencv/: Makefile.am  makefile-manual  opencv.c  opencv.conf
drivers/pantilt/: Changelog  Makefile  Makefile.am  pantilt.c
drivers/player/: Makefile  Makefile.am  player.c
drivers/simulated3D/: Makefile-manual  camA  robotics-lab  simulated3D.conf  simulated3D.h  xformsutils.c  xformsutils.h
drivers/video4linux/: Makefile  Makefile.am  video4linux.c
drivers/video4linux2/: Makefile.am  video4linux2.c  video4linux2.conf
drivers/wiimote/: Makefile.am  wiimote.c
drivers/x10/: Makefile.am  x10.c
examples/: Makefile.am  randomwalk.conf.in
examples/esquema_prueba/: Makefile
examples/myschema/: myschema.c
examples/opengl_viewer/: Makefile
examples/papito/: Makefile  papito.c
interfaces/: Makefile.am  encoders.c  encoders.h  interface.c  interface.h  laser.c  laser.h  motors.c  motors.h  varcolor.h
interfaces/swig/: Makefile.am  encoders.i  interface.i  laser.i  motors.i
libs/colorspaces/: colorspaces.h
libs/progeo/: progeo.c  progeo.h
schemas/: Makefile.am
schemas/calibrador/: Makefile  calibrador.c
schemas/colortuner/: colortuner.c  colortuner.glade
schemas/colortuner/.deps/: colortuner_la-colortuner.Plo
schemas/extrinsics/: Makefile  cam-in  extrinsics.c  extrinsics.h  extrinsicsgui.fd
schemas/eyeoperator/: Makefile  eyeoperator1.c  eyeoperator1.h
schemas/eyeoperator1/: Makefile.am
schemas/eyeoperator4/: Makefile.am
schemas/followball/: Changelog  Makefile  Makefile.am  followball.c  followball.h  followballgui.fd  libRGB2HSI.c  libRGB2HSI.h
schemas/hsituner/: Makefile  hsituner.c  hsituner.h  hsitunergui.c  hsitunergui.h
schemas/hsvtuner/: Makefile  Makefile.am  hsvtuner.c  hsvtuner.h  hsvtunergui.fd
schemas/image_viewer/: Makefile  Makefile.am  image_viewer.c  image_viewer.h
schemas/imgrectifier/: Makefile  Makefile.am  imgrectifier.c  imgrectifier.glade
schemas/introrob/: .player  Makefile  Makefile.am  introrob.c  introrob.h  introrobgui.fd  navegacion.c  utilidades.h
schemas/introrob2/: introrob2.c
schemas/mastergui/: Makefile  Makefile.am  mastergui.c  mastergui.glade  mastergui.h
schemas/myperceptive/: myperceptivegui.c  myperceptivegui.h
schemas/myschema/: Makefile  Makefile.am  myschema.c  myschema.h  myschemagui.c  myschemagui.h
schemas/naooperator/: Makefile.am  naooperator.c  naooperator.glade
schemas/opencvdemo/: Makefile.am  opencvdemo.c  opencvdemo.conf  opencvdemo.h
schemas/opengl_viewer/: Makefile.am  opengl_viewer.c
schemas/opengldemo/: Makefile  Makefile.am  opengldemo.c  opengldemo.h  opengldemogui.c  opengldemogui.h
schemas/opflow/: Makefile  Makefile.am  opflow.c  opflow.h  opflowgui.fd
schemas/papito/: Makefile  papito.c  papito.h  papitogui.c  papitogui.h
schemas/perceptive/: Makefile  perceptive1.c  perceptive1.h  perceptive1gui.c  perceptive1gui.fd  perceptive1gui.h
schemas/prueba-ipp/: Makefile  prueba_ipp.c  prueba_ipp.glade  prueba_ipp.h
schemas/recorder/: Makefile  Makefile.am  recorder.c  recorder.h  recordergui.fd
schemas/speedy/: Makefile  speedy.c  speedy.h
schemas/teleoperator/: Makefile  Makefile.am  teleoperator.c  teleoperator.h
schemas/wiimote_viewer/: Makefile.am  wiimote_viewer.c
schemas/wiioperator/: Makefile.am  wiioperator.c
schemas/x10_controller/: Makefile.am  x10_controller.c
services/graphics_gtk/: Makefile.am  graphics_gtk.c
services/graphics_xforms/: Makefile.am  graphics_xforms.c
services/networkserver/: Makefile.am  jdemessages.h  networkserver.c
utils/colorspaces/: Changelog  colorspaces.h  rgb2hsv.c
utils/graphics_gtk/: Makefile.am
utils/rgb2hsi/: Changelog  Makefile  rgb2hsi.c  rgb2hsi.h
